<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aspen_description</name>
  <version>0.1.0</version>
  <description>Aspen differential drive robot description</description>
  <maintainer email="abrown.inbox@gmail.com">Avi Brown</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ros2_control_demo_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
